--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,8 @@
 rootProject.name = 'java-demo'
+include 'java-spi-demo:java-spi-api'
+findProject(':java-spi-demo:java-spi-api')?.name = 'java-spi-api'
+include 'java-spi-demo:java-spi-provider'
+findProject(':java-spi-demo:java-spi-provider')?.name = 'java-spi-provider'
+include 'java-spi-demo:java-spi-app'
+findProject(':java-spi-demo:java-spi-app')?.name = 'java-spi-app'
 
