--- a/settings.gradle
+++ b/settings.gradle
@@ -5,5 +5,5 @@ include 'java-spi-demo:java-spi-provider'
 findProject(':java-spi-demo:java-spi-provider')?.name = 'java-spi-provider'
 include 'java-spi-demo:java-spi-app'
 findProject(':java-spi-demo:java-spi-app')?.name = 'java-spi-app'
-include 'java-mysql-demo:mysql-jdbc-demo'
+include 'java-db-demo:mysql-jdbc-demo'
 
