--- a/java-spring/java-spring-aop/build.gradle
+++ b/java-spring/java-spring-aop/build.gradle
@@ -12,9 +12,9 @@ repositories {
 }
 
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    compileOnly 'org.projectlombok:lombok:1.18.28'
-    runtimeOnly('com.h2database:h2')
+    implementation('org.springframework.boot:spring-boot-starter-aop')
+//    implementation 'cglib:cglib:3.3.0'
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
