init spring event and rabbitmq

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,13 +1,21 @@
 rootProject.name = 'java-demo'
-include 'java-spi-demo:java-spi-api'
-findProject(':java-spi-demo:java-spi-api')?.name = 'java-spi-api'
-include 'java-spi-demo:java-spi-provider'
-findProject(':java-spi-demo:java-spi-provider')?.name = 'java-spi-provider'
-include 'java-spi-demo:java-spi-app'
-findProject(':java-spi-demo:java-spi-app')?.name = 'java-spi-app'
-include 'java-db-demo:mysql-jdbc-demo'
+//include 'java-spi-demo:java-spi-api'
+//findProject(':java-spi-demo:java-spi-api')?.name = 'java-spi-api'
+//include 'java-spi-demo:java-spi-provider'
+//findProject(':java-spi-demo:java-spi-provider')?.name = 'java-spi-provider'
+//include 'java-spi-demo:java-spi-app'
+//findProject(':java-spi-demo:java-spi-app')?.name = 'java-spi-app'
+//include 'java-db-demo:mysql-jdbc-demo'
 include 'java-db-demo:springboot-hikaricp-h2'
 findProject(':java-db-demo:springboot-hikaricp-h2')?.name = 'springboot-hikaricp-h2'
-include 'java-spring:java-spring-aop'
-findProject(':java-spring:java-spring-aop')?.name = 'java-spring-aop'
+//include 'java-spring:java-spring-aop'
+//findProject(':java-spring:java-spring-aop')?.name = 'java-spring-aop'
+//include 'java-spring:java-spring-ioc'
+//findProject(':java-spring:java-spring-ioc')?.name = 'java-spring-ioc'
+//include 'java-spring:java-spring-mvc'
+//findProject(':java-spring:java-spring-mvc')?.name = 'java-spring-mvc'
+include 'java-spring:java-spring-event'
+findProject(':java-spring:java-spring-event')?.name = 'java-spring-event'
+include 'java-spring:java-spring-rabbitmq'
+findProject(':java-spring:java-spring-rabbitmq')?.name = 'java-spring-rabbitmq'
 
