--- a/java-spring/java-spring-mvc/build.gradle
+++ b/java-spring/java-spring-mvc/build.gradle
@@ -1,10 +1,10 @@
 plugins {
+    id 'application'
     id 'org.springframework.boot' version '2.7.5'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
-    id 'application'
 }
 
-group = 'me.lyou'
+group = 'org.example'
 version = '1.0-SNAPSHOT'
 
 repositories {
@@ -12,8 +12,7 @@ repositories {
 }
 
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter-aop')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    implementation('org.springframework.boot:spring-boot-starter-web')
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
